Fix incorrect id in gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,9 @@ loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=0.1.0
-maven_group=meanwhile131.elytraautopilot
-archives_base_name=elytra-autopilot
+mod_version=0.1.1
+maven_group=meanwhile131.elytrainfinite
+archives_base_name=elytra-infinite
 
 # Dependencies
 fabric_version=0.130.0+1.21.8
