--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ archives_base_name=elytra-infinite
 
 # Dependencies
 fabric_version=0.130.0+1.21.8
+yacl_version=3.7.1+1.21.6-fabric
+modmenu_version=15.0.0-beta.3
