--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.16.14
+minecraft_version=1.21.9
+yarn_mappings=1.21.9+build.1
+loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.1.0
 maven_group=meanwhile131.elytrainfinite
 archives_base_name=elytra-infinite
 
 # Dependencies
-fabric_version=0.130.0+1.21.8
-yacl_version=3.7.1+1.21.6-fabric
-modmenu_version=15.0.0-beta.3
+fabric_version=0.133.14+1.21.9
+yacl_version=3.8.0+1.21.9-fabric
+modmenu_version=16.0.0-rc.1
