--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.17.2
-loom_version=1.11-SNAPSHOT
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.2
+loader_version=0.18.2
+loom_version=1.14-SNAPSHOT
 
 # Mod Properties
 mod_version=1.2.0
@@ -15,6 +15,6 @@ maven_group=meanwhile131.elytrainfinite
 archives_base_name=elytra-infinite
 
 # Dependencies
-fabric_version=0.135.0+1.21.10
-yacl_version=3.8.0+1.21.9-fabric
-modmenu_version=16.0.0-rc.1
+fabric_version=0.139.4+1.21.11
+yacl_version=3.8.1+1.21.11-fabric
+modmenu_version=17.0.0-alpha.1
