--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
+org.gradle.configuration-cache=true
+
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.11
