--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 org.gradle.configuration-cache=true
+org.gradle.caching=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
