--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,17 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}_${{ steps.version.outputs.tag }}
           path: build/libs
+  dependency-submission:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v5
