--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ org.gradle.caching=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.11
-loader_version=0.18.2
+minecraft_version=26.1-snapshot-2
+loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
 # Mod Properties
@@ -16,6 +16,6 @@ maven_group=meanwhile131.elytrainfinite
 archives_base_name=elytra-infinite
 
 # Dependencies
-fabric_version=0.139.4+1.21.11
-yacl_version=3.8.1+1.21.11-fabric
-modmenu_version=17.0.0-alpha.1
+fabric_api_version=0.141.2+26.1
+yacl_version=3.8.2+26.1.0-fabric
+modmenu_version=18.0.0-alpha.4
